--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+**************************************************************************************************************************************************
+**Merged into mainline** Aarch64 support has been merged into jdk8
+**ARCHIVED PROJECT** AdoptOpenJDK has moved to the Eclipse Adoptium Project. This repo is effectively now at https://www.github.com/adoptium/jdk8u
+**************************************************************************************************************************************************
+
 README:
   This file should be located at the top of the OpenJDK Mercurial root
   repository. A full OpenJDK repository set (forest) should also include
